--- a/home.html
+++ b/home.html
@@ -53,6 +53,7 @@
                 <div class="online_admission_div"><h4 id="clp"><a href="#">Online Admission Portal</a></h4></div>
             </div>
         </div>
+        <i id="icon1" class="ri-arrow-left-s-fill"></i>
         <div class="second_nav">
                 <ul>
                  <li><a href="./home.html">Home</a><i class="ri-arrow-down-s-line"></i><i class="ri-arrow-up-s-fill up_arrow"></i>
@@ -144,6 +145,7 @@
                  <li><a href="#">Library<i class="ri-arrow-up-s-fill up_arrow"></i></a></li>
                 </ul>
         </div>
+        <i id="icon2" class="ri-arrow-right-s-fill"></i>
     </div>
     <div class="main">
         <div class="slid_show_main_div">
@@ -178,9 +180,33 @@
         </div>
         <div class="college_description_div_outer_layer">
             <div class="college_description">
-                <div class="college_description1"></div>
-                <div class="college_description2"></div>
-                <div class="college_description3"></div>
+                <div class="college_description1">
+                        <div><a href="#">Staff</a></div>
+                        <div><a href="#">Departments</a></div>
+                        <div><a href="#">Sub-commitee</a></div>
+                        <div><a href="#">Facilities</a></div>
+                        <div><a href="#">NCC</a></div>
+                        <div><a href="#">NSS</a></div>
+                        <div><a href="#">Teacher's Journal</a></div>
+                        <div><a href="#">Photo Gallery</a></div>
+                </div>
+                <div class="college_description2">
+                    <div class="clg_desc">
+                    <div><h4>Welcome to Nabadwip Vidyasagar College</h4></div>
+                    <div><p>Our College was born on the 5th of March 1942 when the ongoing Second World War prompted the esteemed Calcutta Vidyasagar College to open two more campuses. One was at Suri, Birbhum and the other one was at Nabadwip, the erstwhile ‘Oxford of the East’. Up to 1948 the college functioned as a branch of the mother institution. It was housed at the Nabadwip Hindu School. A local committee comprising of some eminent citizens of Nabadwip ran the fledgeling institution, headed by Prof. Madhab Das Chakrabarty of Calcutta Vidyasagar College. Prof. J.K. Chowdhury took over as the Principal on 10.09.1948, when the college obtained an independent status, a full-fledged Governing Body and a permanent affiliation from Calcutta University.</p></div>
+                    <div><p>Our institution is affiliated to the University of Kalyani since 1999.NAAC (National Assessment and Accreditation Council) accredited our college (Grade-B) on 17.04.2007. Once again, we received ‘B’ grade from NAAC on 30th October 2017. At present the college imparts education in as many as Seventeen honours courses and three customary general courses. There is also the post-graduate course in Sanskrit and three more M.A courses in DODL mode.</p></div>
+                    </div>
+                </div>
+                <div class="college_description3">
+                    <div><a href="#">Student Satisfaction Survay</a></div>
+                    <div><a href="#">Feedback Form</a></div>
+                        <div><a href="#">Career Counseling</a></div>
+                        <div><a href="#">DODL</a></div>
+                        <div><a href="#">NSOU</a></div>
+                        <div><a href="#">RTI</a></div>
+                        <div><a href="#">Academic Calender</a></div>
+                        <div><a href="#">Srudent Magazine</a></div>
+                </div>
             </div>
         </div>
         <div class="priniciple_notice_description_outer_layer">
