--- a/home/home.html
+++ b/home/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nabadwip Vidyasagar College</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="home.css">
     <link rel="shortcut icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQng0Fk4I5N9F58NRajUuqosjR7gjKq-zzzyp8vdr7D3G5oydCUeYGQiTTqPtflpa-gKlM&usqp=CAU" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
@@ -25,7 +25,7 @@
                     <a href="../nacc/nacc.html">NACC</a>
                 </div>
                 <div class="first_nav_elem">
-                    <a href="#">SSRs</a>
+                    <a href="../ssrs/ssrs.html">SSRs</a>
                 </div>
                 <div class="first_nav_elem">
                     <a href="#">RUSA</a>
@@ -55,6 +55,7 @@
         </div>
         <i id="icon1" class="ri-arrow-left-s-fill"></i>
         <div class="second_nav">
+            <i class="ri-menu-fill"></i>
                 <ul>
                  <li><a href="./home.html">Home</a><i class="ri-arrow-down-s-line"></i><i class="ri-arrow-up-s-fill up_arrow"></i>
                     <div class="sub_menu_1">
@@ -387,6 +388,6 @@
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="script.js"></script>
+    <script src="home.js"></script>
 </body>
 </html>
