--- a/nirf/nirf.html
+++ b/nirf/nirf.html
@@ -25,7 +25,7 @@
                     <a href="../nacc/nacc.html">NACC</a>
                 </div>
                 <div class="first_nav_elem">
-                    <a href="#">SSRs</a>
+                    <a href="../ssrs/ssrs.html">SSRs</a>
                 </div>
                 <div class="first_nav_elem">
                     <a href="#">RUSA</a>
@@ -55,6 +55,7 @@
         </div>
         <i id="icon1" class="ri-arrow-left-s-fill"></i>
         <div class="second_nav">
+            <i class="ri-menu-fill"></i>
                 <ul>
                  <li class="menu_first_elem"><a href="../home/home.html">Home</a><i class="ri-arrow-down-s-line"></i><i class="ri-arrow-up-s-fill up_arrow"></i>
                     <div class="sub_menu_1">
