--- a/nacc/nacc.html
+++ b/nacc/nacc.html
@@ -22,13 +22,13 @@
                     <a href="#">IQAC</a>
                 </div>
                 <div class="first_nav_elem">
-                    <a href="nacc.html">NACC</a>
+                    <a href="./nacc.html">NACC</a>
                 </div>
                 <div class="first_nav_elem">
                     <a href="../ssrs/ssrs.html">SSRs</a>
                 </div>
                 <div class="first_nav_elem">
-                    <a href="#">RUSA</a>
+                    <a href="../rusa/rusa.html">RUSA</a>
                 </div>
                 <div class="first_nav_elem">
                     <a href="#">Tender</a>
