--- a/nirf/nirf.html
+++ b/nirf/nirf.html
@@ -16,7 +16,7 @@
                     <h3 id="time_date"></h3>
                 </div>
                 <div class="first_nav_elem">
-                   <a href="nirf.html">NIRF</a>
+                   <a href="./nirf.html">NIRF</a>
                 </div>
                 <div class="first_nav_elem">
                     <a href="#">IQAC</a>
@@ -28,7 +28,7 @@
                     <a href="../ssrs/ssrs.html">SSRs</a>
                 </div>
                 <div class="first_nav_elem">
-                    <a href="#">RUSA</a>
+                    <a href="../rusa/rusa.html">RUSA</a>
                 </div>
                 <div class="first_nav_elem">
                     <a href="#">Tender</a>
