--- a/ssrs/ssrs.html
+++ b/ssrs/ssrs.html
@@ -32,7 +32,7 @@
                 <a href="./ssrs.html">SSRs</a>
             </div>
             <div class="first_nav_elem">
-                <a href="#">RUSA</a>
+                <a href="../rusa/rusa.html">RUSA</a>
             </div>
             <div class="first_nav_elem">
                 <a href="#">Tender</a>
