--- a/home/home.html
+++ b/home/home.html
@@ -31,7 +31,7 @@
                     <a href="../rusa/rusa.html">RUSA</a>
                 </div>
                 <div class="first_nav_elem">
-                    <a href="#">Tender</a>
+                    <a href="../tender/tender.html">Tender</a>
                 </div>
                 <div class="first_nav_elem">
                     <a href="#">RTI</a>
