--- a/home/index.html
+++ b/home/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nabadwip Vidyasagar College</title>
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQng0Fk4I5N9F58NRajUuqosjR7gjKq-zzzyp8vdr7D3G5oydCUeYGQiTTqPtflpa-gKlM&usqp=CAU" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
@@ -57,7 +57,7 @@
         <div class="second_nav">
             <i class="ri-menu-fill"></i>
                 <ul>
-                 <li><a href="../home/home.html">Home</a><i class="ri-arrow-down-s-line"></i><i class="ri-arrow-up-s-fill up_arrow"></i>
+                 <li><a href="./index.html">Home</a><i class="ri-arrow-down-s-line"></i><i class="ri-arrow-up-s-fill up_arrow"></i>
                     <div class="sub_menu_1">
                         <ul>
                             <li><a href="#">History of College</a></li>
@@ -388,6 +388,6 @@
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="home.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
