--- a/nacc/nacc.html
+++ b/nacc/nacc.html
@@ -57,7 +57,7 @@
         <div class="second_nav">
             <i class="ri-menu-fill"></i>
                 <ul>
-                 <li class="menu_first_elem"><a href="../home/home.html">Home</a><i class="ri-arrow-down-s-line"></i><i class="ri-arrow-up-s-fill up_arrow"></i>
+                 <li class="menu_first_elem"><a href="../home/index.html">Home</a><i class="ri-arrow-down-s-line"></i><i class="ri-arrow-up-s-fill up_arrow"></i>
                     <div class="sub_menu_1">
                         <ul>
                             <li><a href="#">History of College</a></li>
