--- a/tender/tender.html
+++ b/tender/tender.html
@@ -65,7 +65,7 @@
         <div class="second_nav">
             <i class="ri-menu-fill"></i>
             <ul>
-                <li><a href="../home/index.js">Home</a><i class="ri-arrow-down-s-line"></i><i
+                <li><a href="../index.html">Home</a><i class="ri-arrow-down-s-line"></i><i
                         class="ri-arrow-up-s-fill up_arrow"></i>
                     <div class="sub_menu_1">
                         <ul>
