--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <a href="#">IQAC</a>
                 </div>
                 <div class="first_nav_elem">
-                    <a href="../nacc/nacc.html">NACC</a>
+                    <a href="nacc.html">NACC</a>
                 </div>
                 <div class="first_nav_elem">
                     <a href="../ssrs/ssrs.html">SSRs</a>
