--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <h3 id="time_date"></h3>
                 </div>
                 <div class="first_nav_elem">
-                   <a href="../nirf/nirf.html">NIRF</a>
+                   <a href="nirf/nirf.html">NIRF</a>
                 </div>
                 <div class="first_nav_elem">
                     <a href="#">IQAC</a>
