--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
                     <a href="#">IQAC</a>
                 </div>
                 <div class="first_nav_elem">
-                    <a href="nacc.html">NACC</a>
+                    <a href="nacc/nacc.html">NACC</a>
                 </div>
                 <div class="first_nav_elem">
-                    <a href="../ssrs/ssrs.html">SSRs</a>
+                    <a href="ssrs/ssrs.html">SSRs</a>
                 </div>
                 <div class="first_nav_elem">
-                    <a href="../rusa/rusa.html">RUSA</a>
+                    <a href="rusa/rusa.html">RUSA</a>
                 </div>
                 <div class="first_nav_elem">
-                    <a href="../tender/tender.html">Tender</a>
+                    <a href="tender/tender.html">Tender</a>
                 </div>
                 <div class="first_nav_elem">
                     <a href="#">RTI</a>
