--- a/tender/tender.html
+++ b/tender/tender.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RUSA - Nabadwip Vidyasagar College</title>
+    <title>Tender - Nabadwip Vidyasagar College</title>
     <link rel="stylesheet" href="tender.css">
     <link rel="shortcut icon"
         href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQng0Fk4I5N9F58NRajUuqosjR7gjKq-zzzyp8vdr7D3G5oydCUeYGQiTTqPtflpa-gKlM&usqp=CAU"
