--- a/online_admission_page/admission_portal.html
+++ b/online_admission_page/admission_portal.html
@@ -15,7 +15,7 @@
                     Nabadwip Vidyasagar College
                 </div>
                 <div class="main_section">
-                    <div class="section"><a href="#"><i class="ri-microsoft-fill"></i>Home</a></div>
+                    <div class="section"><a href="admission_portal.html"><i class="ri-microsoft-fill"></i>Home</a></div>
                     <div class="section"><a href="#"><i class="ri-microsoft-fill"></i>How to Use</a></div>
                     <div class="section"><a href="Date Schdule3 2023-2024.pdf"><i class="ri-microsoft-fill"></i>Date Calendar(3rd Phase)</a></div>
                     <div class="section"><a href="Date Schdule2 2023-2024.pdf"><i class="ri-microsoft-fill"></i>Date Calendar(2nd Phase)</a></div>
