--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <a href="tender/tender.html">Tender</a>
                 </div>
                 <div class="first_nav_elem">
-                    <a href="#">RTI</a>
+                    <a href="rti/rti.html">RTI</a>
                 </div>
                 <div class="first_nav_elem">
                     <a href="#">AISHE Certificates</a>
