--- a/online_admission_page/admission_portal.html
+++ b/online_admission_page/admission_portal.html
@@ -12,7 +12,7 @@
         <div class="main">
             <div class="main_left_part">
                 <div class="heading_section">
-                    Nabadwip Vidyasagar College
+                    <span>Nabadwip</span> <span>Vidyasagar College</span>
                 </div>
                 <div class="main_section">
                     <div class="section"><a href="admission_portal.html"><i class="ri-microsoft-fill"></i>Home</a></div>
