--- a/rti/rti.html
+++ b/rti/rti.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tender - Nabadwip Vidyasagar College</title>
-    <link rel="stylesheet" href="tender.css">
+    <title>Right To Information - Nabadwip Vidyasagar College</title>
+    <link rel="stylesheet" href="rti.css">
     <link rel="shortcut icon"
         href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQng0Fk4I5N9F58NRajUuqosjR7gjKq-zzzyp8vdr7D3G5oydCUeYGQiTTqPtflpa-gKlM&usqp=CAU"
         type="image/x-icon">
@@ -35,10 +35,10 @@
                 <a href="../rusa/rusa.html">RUSA</a>
             </div>
             <div class="first_nav_elem">
-                <a href="./tender.html">Tender</a>
+                <a href="/tender/tender.html">Tender</a>
             </div>
             <div class="first_nav_elem">
-                <a href="../rti/rti.html">RTI</a>
+                <a href="./rti.html">RTI</a>
             </div>
             <div class="first_nav_elem">
                 <a href="#">AISHE Certificates</a>
@@ -260,9 +260,9 @@
         <i id="icon2" class="ri-arrow-right-s-fill"></i>
     </div>
     <div class="main">
-        <div class="tender_main">
-            <div class="tender_heading">
-                Tender
+        <div class="rti_main">
+            <div class="rti_heading">
+                RTI
             </div>
         </div>
     </div>
@@ -273,7 +273,7 @@
                 <div class="map">
                     <a href="https://www.google.com/maps/place/Nabadwip+Vidyasagar+College/@23.409259,88.3618086,17z/data=!3m1!4b1!4m6!3m5!1s0x39f91da7d94081bd:0x62092d4e6edf1ee9!8m2!3d23.4092541!4d88.3643889!16s%2Fm%2F0j282h0?entry=ttu"
                         target="_blank">
-                        <img src="map3.png" alt="">
+                        <img src="../map3.png" alt="">
                         <a id="map_link"
                             href="https://www.google.com/maps/place/Nabadwip+Vidyasagar+College/@23.409259,88.3618086,17z/data=!3m1!4b1!4m6!3m5!1s0x39f91da7d94081bd:0x62092d4e6edf1ee9!8m2!3d23.4092541!4d88.3643889!16s%2Fm%2F0j282h0?entry=ttu">View
                             larger map</a>
@@ -337,7 +337,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"
         integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="tender.js"></script>
+    <script src="rti.js"></script>
 </body>
 
 </html>
