--- a/rusa/rusa.html
+++ b/rusa/rusa.html
@@ -35,10 +35,10 @@
                 <a href="./rusa.html">RUSA</a>
             </div>
             <div class="first_nav_elem">
-                <a href="#">Tender</a>
+                <a href="../tender/tender.html">Tender</a>
             </div>
             <div class="first_nav_elem">
-                <a href="#">RTI</a>
+                <a href="../rti/rti.html">RTI</a>
             </div>
             <div class="first_nav_elem">
                 <a href="#">AISHE Certificates</a>
@@ -54,10 +54,10 @@
             </div>
             <div class="college_logo_part2">
                 <div class="call_of_paper_div">
-                    <h4 id="clp"><a href="#">Call of Paper</a></h4>
+                    <h4 id="clp"><a href="../1682498131-Inviting_paper_for_NVC_Teacher's_journal.pdf">Call of Paper</a></h4>
                 </div>
                 <div class="online_admission_div">
-                    <h4 id="clp"><a href="#">Online Admission Portal</a></h4>
+                    <h4 id="clp"><a href="../online_admission_page/admission_portal.html">Online Admission Portal</a></h4>
                 </div>
             </div>
         </div>
