--- a/rusa/rusa.html
+++ b/rusa/rusa.html
@@ -41,7 +41,7 @@
                 <a href="../rti/rti.html">RTI</a>
             </div>
             <div class="first_nav_elem">
-                <a href="#">AISHE Certificates</a>
+                <a href="../aishe certificate/aishe_certificate.html">AISHE Certificates</a>
             </div>
             <div class="first_nav_elem">
                 <a href="#">Sitemap</a>
