--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                  <li><a href="index.html">Home</a><i class="ri-arrow-down-s-line"></i><i class="ri-arrow-up-s-fill up_arrow"></i>
                     <div class="sub_menu_1">
                         <ul>
-                            <li><a href="#">History of College</a></li>
+                            <li><a href="home/history_of_college/history_of_college.html">History of College</a></li>
                             <li><a href="#">Principal's Message</a></li>
                             <li><a href="#">Amis & Objectivies</a></li>
                             <li><a href="#">Vission & Mission</a></li>
