--- a/home/history_of_college/history_of_college.html
+++ b/home/history_of_college/history_of_college.html
@@ -32,7 +32,7 @@
                 <a href="../../ssrs/ssrs.html">SSRs</a>
             </div>
             <div class="first_nav_elem">
-                <a href="..././rusa/rusa.html">RUSA</a>
+                <a href="../../rusa/rusa.html">RUSA</a>
             </div>
             <div class="first_nav_elem">
                 <a href="../../tender/tender.html">Tender</a>
@@ -70,7 +70,7 @@
                     <div class="sub_menu_1">
                         <ul>
                             <li><a href="../history_of_college/history_of_college.html">History of College</a></li>
-                            <li><a href="#">Principal's Message</a></li>
+                            <li><a href="../principal_message/principal_message.html">Principal's Message</a></li>
                             <li><a href="#">Amis & Objectivies</a></li>
                             <li><a href="#">Vission & Mission</a></li>
                         </ul>
