--- a/tender/tender.html
+++ b/tender/tender.html
@@ -70,7 +70,7 @@
                     <div class="sub_menu_1">
                         <ul>
                             <li><a href="../home/history_of_college/history_of_college.html">History of College</a></li>
-                            <li><a href="#">Principal's Message</a></li>
+                            <li><a href="../home/principal_message/principal_message.js">Principal's Message</a></li>
                             <li><a href="#">Amis & Objectivies</a></li>
                             <li><a href="#">Vission & Mission</a></li>
                         </ul>
