--- a/home/principal_message/principal_message.html
+++ b/home/principal_message/principal_message.html
@@ -72,7 +72,7 @@
                             <li><a href="../history_of_college/history_of_college.html">History of College</a></li>
                             <li><a href="principal_message.html">Principal's Message</a></li>
                             <li><a href="#">Amis & Objectivies</a></li>
-                            <li><a href="#">Vission & Mission</a></li>
+                            <li><a href="../vision_mission/vision_mission.html">Vission & Mission</a></li>
                         </ul>
                     </div>
                 </li>
